[tool.poetry]
name = "thinq2"
version = "0.1.0"
description = ""
authors = ["tinkerborg <tinkerborg@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
uplink = "^0.9.1"
marshmallow = "^3.5.1"
marshmallow-dataclass = "^7.5.0"
inflection = "^0.4.0"
marshmallow_enum = "^1.5.1"
PyOpenSSL = "^19.1.0"
paho-mqtt = "^1.5.0"
attrdict = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
black = "^19.10b0"
flake8 = "^3.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
