[tool.poetry]
name = "thinq2"
version = "0.1.0"
description = ""
authors = ["tinkerborg <tinkerborg@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
uplink = "^0.9.7"
marshmallow = "^3.19.0"
marshmallow-dataclass = "^8.5.11"
inflection = "^0.5.1"
marshmallow_enum = "^1.5.1"
PyOpenSSL = "^23.0.0"
paho-mqtt = "^1.6.1"
attrdict3 = "^2.0.2"
deepmerge = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pylint = "^2.16.2"
black = "^23.1.0"
flake8 = "^6.0.0"
rope = "^1.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
